--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -20,7 +20,7 @@ source('code/analysis_functions.r')
 
 metricsForManyTrees(list.files("trees/uniform_sampling_experiment"),
                     treedir = "trees/uniform_sampling_experiment",
-                    fileOut = "derived_tree_data/USE_treeStats.txt", append = F)
+                    fileOut = "derived_tree_data/USE_treeStats.txt")
 
 
 # Parameter key across simulations; 
