tweaking metric-process correlation plot

--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -124,6 +124,7 @@ heatmaply(corrs, colors = cool_warm)
 Calculating individual as well as model-averaged correlation coefficients between all metrics and processes
 
 ```{r, cache=cacheData}
+# NOTE: Change next line to statisticsIndices2 to view the smaller subset of metrics not strongly correlated with richness
 statisticsIndices = statisticsIndices1
 statistics = colnames(simuData)[statisticsIndices]
 nStats = length(statisticsIndices)
@@ -175,7 +176,7 @@ for(i in 1:length(statisticsIndices)){
 Definition of image plot
 
 ```{r}
-image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gray94", "pink","red", "darkred"), 
+image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "cyan", "gray94", "coral","red", "darkred"), 
                        range = c(-1,1), x.labels = dimnames(mat)[[1]],      y.labels = dimnames(mat)[[2]]) { 
   
   newMat = matrix(nrow = dim(mat)[1], ncol = 50)
@@ -193,9 +194,9 @@ image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gr
   abline(v = c(0,10,20,30,40,50) + 0.5)
   abline(v = c(0,10,20,30,40,50) - 1.5)
   abline(h = c(1:(nStats +1)) + 0.5)
-  axis(2, at = 1:nrow(mat), labels = x.labels, las = 2, cex.axis = 1)
-  axis(3, at = seq(5, 45, by = 10), labels = y.labels, cex.axis = 1.25, las = 1)
-  axis(1, at = xpos, labels = rep(dimnames(mat)[[3]], 5), cex.axis = 0.9, las = 2)
+  axis(2, at = 1:nrow(mat), labels = x.labels, las = 2, cex.axis = .5)
+  axis(3, at = seq(5, 45, by = 10), labels = y.labels, cex.axis = 1, las = 1)
+  axis(1, at = xpos, labels = rep(dimnames(mat)[[3]], 5), cex.axis = 0.7, las = 2)
   
   # text(x = xpos, y = 0, srt = 45, adj = 1, xpd = TRUE, labels = rep(dimnames(mat)[[3]], 5), cex = 0.65)
   box() 
@@ -218,7 +219,7 @@ par(mar = c(5,10,5,3))
 alt.x.labels = dimnames(R2MatFull)[[1]]
 
 #NOTE: The following line only works if statisticsIndices was originally assigned statisticsIndices1 (with 19 elements)
-alt.x.labels[c(7, 11, 14, 15, 16, 17, 18)] = c("Yule-PDA ratio", "mean I'", "MGL prin. eigenvalue", "MGL asymmetry", "MGL peakedness", "MGL eigengap", "nLTT stat")
+#alt.x.labels[c(7, 11, 14, 15, 16, 17, 18)] = c("Yule-PDA ratio", "mean I'", "MGL prin. eigenvalue", "MGL asymmetry", "MGL peakedness", "MGL eigengap", "nLTT stat")
 
 # Modifying a few model abbreviations here (e.g. am and pw)
 dimnames(R2MatFull)[[3]] = c("ca", "fh", "gen", "hs", "am", "pw", "ve", "xe")
@@ -226,7 +227,7 @@ dimnames(R2MatFull)[[3]] = c("ca", "fh", "gen", "hs", "am", "pw", "ve", "xe")
 image.real3d(R2MatFull, signMatFull, x.labels = alt.x.labels, y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"))
 
 mtext("Models", 1, line = 3.5, cex = 2)
-mtext("Metrics", 2, at = 10, cex = 2, line = 8)
+mtext("Metrics", 2, at = nStats/2, cex = 2, line = 8)
 mtext("Processes", 3, cex = 2, line = 3)
 
 ```
