--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -129,46 +129,47 @@ statisticsIndices = statisticsIndices1
 statistics = colnames(simuData)[statisticsIndices]
 nStats = length(statisticsIndices)
 
-signMat = matrix(nrow = length(statistics), 
+R2Mat = matrix(nrow = length(statistics), 
                  ncol = length(predictors),
                  dimnames = list(statistics, predictors))
 
-R2Mat = disAg = disAg2 = signMat
+numAgreements = numSigAgreements = R2Mat
 
-R2MatFull = signMatFull = array(
+R2MatFull = pMatFull = array(
     dim = c(length(statistics), length(predictors), length(models)),
     dimnames = list(statistics, predictors, models)) 
 
+alpha = 0.01 # threshold for counting "significant" correlations
 
 for(i in 1:length(statisticsIndices)){
   for(j in 1:length(predictorsIndices)){
-    R2 = sig = rep(NA, length(models))
+    R2 = pvalues = sign = rep(NA, length(models))
     for(k in 1:length(models)){
       tmp = simuData[simuData$model == models[k],]
       x = scale(tmp[,statisticsIndices[i]])
       y = tmp[,predictorsIndices[j]]
       if(! all(is.na(y))){
       
-      corRes = cor.test(x,y, method = "kendall")
+        corRes = cor.test(x,y, method = "kendall")
         
-      # fit <- summary(lm(y ~ x))
-      # R2[k] = fit$r.squared
-      # sig[k] = ifelse(fit$coefficients[2,4] <0.05, sign(fit$coefficients[2,1]), 0)
-      R2[k] = corRes$estimate
-      sig[k] = corRes$p.value
+        R2[k] = corRes$estimate
+        pvalues[k] = corRes$p.value
+        sign[k] = sign(corRes$estimate)
+
       } else{
         R2[k] = NA
-        sig[k] = NA
+        pvalues[k] = NA
+        sign[k] = NA
       }
     }
     R2MatFull[i,j,] = R2
-    signMatFull[i,j,] = sig
-    #R2Mat[i,j] = mean(R2, na.rm = T)
-    #signMat[i,j] = sum(sig, na.rm = T) / sum(!is.na(sig))
-    #disAg[i,j] = abs(sum(sig == 1, na.rm = T) - sum(sig == -1, na.rm = T)) / abs(sum(sig %in% c(1,-1), na.rm = T))
-    #disAg2[i,j] = max(sum(sig == 1, na.rm = T), sum(sig == -1, na.rm = T)) / abs(sum(sig %in% c(1,-1), na.rm = T))
+    pMatFull[i,j,] = pvalues
+    numAgreements[i,j] = max(sum(sign == 1, na.rm = T), sum(sign == -1, na.rm = T))
+    numSigAgreements[i,j] = max(sum(sign[pvalues <= alpha] == 1, na.rm = T), 
+                      sum(sign[pvalues <= alpha] == -1, na.rm = T))
   }
 }
+
 ```
 
 ## Full plot
@@ -176,8 +177,9 @@ for(i in 1:length(statisticsIndices)){
 Definition of image plot
 
 ```{r}
-image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "cyan", "gray94", "coral","red", "darkred"), 
-                       range = c(-1,1), x.labels = dimnames(mat)[[1]],      y.labels = dimnames(mat)[[2]], alpha = .01) { 
+image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gray94", "pink","red", "darkred"), 
+                       range = c(-1,1), x.labels = dimnames(mat)[[1]],      y.labels = dimnames(mat)[[2]], alpha = .01, cex.metrics = 0.5, 
+                       cex.models = 0.7, cex.processes = 1) { 
   
   newMat = matrix(nrow = dim(mat)[1], ncol = 50)
   for(i in 1:dim(mat)[1]){
@@ -188,15 +190,15 @@ image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "cyan", "gray94"
   newMat <- t(newMat)
   xpos = rep(0:(dim(mat)[2]-1), each = dim(mat)[3])*10 + 1:dim(mat)[3] 
   ypos = 1:dim(mat)[1]
-  fields::image.plot(x = 1:50, y = 1:nStats, z = newMat, axes = FALSE, zlim = range, 
+  fields::image.plot(x = 1:50, y = 1:dim(mat)[1], z = newMat, axes = FALSE, zlim = range, 
                      col = colorRampPalette(xCol)(30), xlab = "", ylab = "")
   
   abline(v = c(0,10,20,30,40,50) + 0.5)
   abline(v = c(0,10,20,30,40,50) - 1.5)
-  abline(h = c(1:(nStats +1)) + 0.5)
-  axis(2, at = 1:nrow(mat), labels = x.labels, las = 2, cex.axis = .5)
-  axis(3, at = seq(5, 45, by = 10), labels = y.labels, cex.axis = 1, las = 1)
-  axis(1, at = xpos, labels = rep(dimnames(mat)[[3]], 5), cex.axis = 0.7, las = 2)
+  abline(h = c(1:(dim(mat)[1] +1)) + 0.5)
+  axis(2, at = 1:nrow(mat), labels = x.labels, las = 2, cex.axis = cex.metrics)
+  axis(3, at = seq(5, 45, by = 10), labels = y.labels, cex.axis = cex.processes, las = 1)
+  axis(1, at = xpos, labels = rep(dimnames(mat)[[3]], 5), cex.axis = cex.models, las = 2)
   
   # text(x = xpos, y = 0, srt = 45, adj = 1, xpd = TRUE, labels = rep(dimnames(mat)[[3]], 5), cex = 0.65)
   box() 
@@ -213,6 +215,8 @@ image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "cyan", "gray94"
 ```
 
 ```{r}
+# Correlation plot with ALL tree metrics for supplement
+
 par(mar = c(5,10,5,3))
 
 # Tidier labels
@@ -221,7 +225,35 @@ alt.x.labels = dimnames(R2MatFull)[[1]]
 # Modifying a few model abbreviations here (e.g. am and pw)
 dimnames(R2MatFull)[[3]] = c("ca", "fh", "gen", "hs", "am", "pw", "ve", "xe")
 
-image.real3d(R2MatFull, signMatFull, x.labels = alt.x.labels, y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"))
+image.real3d(R2MatFull, pMatFull, x.labels = alt.x.labels, y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"))
+
+mtext("Models", 1, line = 3.5, cex = 2)
+mtext("Metrics", 2, at = nStats/2, cex = 2, line = 8)
+mtext("Processes", 3, cex = 2, line = 3)
+
+
+# Correlation plot highlighting metrics with strong correlation agreement
+
+agreement = numSigAgreements[(numAgreements[,1] >= 5 & numSigAgreements[,1] >= 4) |
+                            (numAgreements[,2] >= 7 & numSigAgreements[,2] >= 6) | 
+                            (numAgreements[,3] >= 4 & numSigAgreements[,3] >= 3) | 
+                            (numAgreements[,4] >=7 & numSigAgreements[,4] >=6) | 
+                            (numAgreements[,5] >= 6 & numSigAgreements[,5] >= 5),]
+
+highlightMat = R2MatFull[dimnames(R2MatFull)[[1]] %in% rownames(agreement),,]
+pMatHighlight = pMatFull[dimnames(R2MatFull)[[1]] %in% rownames(agreement),,]
+
+par(mar = c(5,10,5,3))
+
+# Tidier labels
+alt.x.labels = dimnames(highlightMat)[[1]]
+
+# Modifying a few model abbreviations here (e.g. am and pw)
+dimnames(highlightMat)[[3]] = c("ca", "fh", "gen", "hs", "am", "pw", "ve", "xe")
+
+image.real3d(highlightMat, pMatHighlight, x.labels = alt.x.labels, 
+             y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"),
+             cex.metrics = .8)
 
 mtext("Models", 1, line = 3.5, cex = 2)
 mtext("Metrics", 2, at = nStats/2, cex = 2, line = 8)
