--- a/Analysis.qmd
+++ b/Analysis.qmd
@@ -92,7 +92,7 @@ predictors = colnames(simuData)[c(14,16,18,20,22)]
 numModelsPerPredictor = c(5, 7, 4, 7, 6)
 
 # 8 models (accounting for abbreviation changes post-experiment)
-modelAbbrevs = data.frame(original = c('ca', 'fh', 'gen', 'hs', 'la', 'pontarp', 've', 'xe'), new = c('ca', 'fh', 'gen', 'hs', 'am', 'pw', 've', 'xe'))
+modelAbbrevs = data.frame(original = c('ca', 'fh', 'gen', 'hs', 'la', 'pontarp', 've', 'xe'), new = c('ca', 'fh', 'ge', 'hs', 'am', 'pw', 've', 'xe'))
 
 models = modelAbbrevs$original
 
@@ -133,7 +133,7 @@ R2Mat = matrix(nrow = length(statistics),
                  ncol = length(predictors),
                  dimnames = list(statistics, predictors))
 
-numAgreements = numSigAgreements = R2Mat
+numAgreements = numSigAgreements = meanCorr = medianCorr = R2Mat
 
 R2MatFull = pMatFull = array(
     dim = c(length(statistics), length(predictors), length(models)),
@@ -167,6 +167,8 @@ for(i in 1:length(statisticsIndices)){
     numAgreements[i,j] = max(sum(sign == 1, na.rm = T), sum(sign == -1, na.rm = T))
     numSigAgreements[i,j] = max(sum(sign[pvalues <= alpha] == 1, na.rm = T), 
                       sum(sign[pvalues <= alpha] == -1, na.rm = T))
+    meanCorr[i,j] = mean(R2, na.rm = T)
+    medianCorr[i,j] = median(R2, na.rm = T)
   }
 }
 
@@ -217,20 +219,22 @@ image.real3d <- function(mat, mat2, xCol = c("darkblue","blue", "lightblue", "gr
 ```{r}
 # Correlation plot with ALL tree metrics for supplement
 
-par(mar = c(5,10,5,3))
+par(mfrow = c(1,1), mar = c(5,15,5,3))
 
 # Tidier labels
 alt.x.labels = dimnames(R2MatFull)[[1]]
 
 # Modifying a few model abbreviations here (e.g. am and pw)
-dimnames(R2MatFull)[[3]] = c("ca", "fh", "gen", "hs", "am", "pw", "ve", "xe")
+dimnames(R2MatFull)[[3]] = c("ca", "fh", "ge", "hs", "am", "pw", "ve", "xe")
 
-image.real3d(R2MatFull, pMatFull, x.labels = alt.x.labels, y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"))
+pdf('figures/all_metric_correlations.pdf', height = 10.5, width = 13)
+image.real3d(R2MatFull, pMatFull, x.labels = alt.x.labels, y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"),
+             cex.metrics = 0.8, cex.models = .9)
 
 mtext("Models", 1, line = 3.5, cex = 2)
-mtext("Metrics", 2, at = nStats/2, cex = 2, line = 8)
+mtext("Metrics", 2, at = nrow(R2MatFull)/2, cex = 2, line = 8)
 mtext("Processes", 3, cex = 2, line = 3)
-
+dev.off()
 
 # Correlation plot highlighting metrics with strong correlation agreement
 
@@ -239,6 +243,12 @@ agreement = numSigAgreements[(numAgreements[,1] >= 5 & numSigAgreements[,1] >= 4
                             (numAgreements[,3] >= 4 & numSigAgreements[,3] >= 3) | 
                             (numAgreements[,4] >=7 & numSigAgreements[,4] >=6) | 
                             (numAgreements[,5] >= 6 & numSigAgreements[,5] >= 5),]
+
+env.metrics = rownames(agreement)[agreement[,1] >= 4]
+dis.metrics = rownames(agreement)[agreement[,2] >= 6]
+nic.metrics = rownames(agreement)[agreement[,3] >= 3]
+mut.metrics = rownames(agreement)[agreement[,4] >= 6]
+com.metrics = rownames(agreement)[agreement[,5] >= 5]
 
 highlightMat = R2MatFull[dimnames(R2MatFull)[[1]] %in% rownames(agreement),,]
 pMatHighlight = pMatFull[dimnames(R2MatFull)[[1]] %in% rownames(agreement),,]
@@ -249,14 +259,14 @@ par(mar = c(5,10,5,3))
 alt.x.labels = dimnames(highlightMat)[[1]]
 
 # Modifying a few model abbreviations here (e.g. am and pw)
-dimnames(highlightMat)[[3]] = c("ca", "fh", "gen", "hs", "am", "pw", "ve", "xe")
+dimnames(highlightMat)[[3]] = c("ca", "fh", "ge", "hs", "am", "pw", "ve", "xe")
 
 image.real3d(highlightMat, pMatHighlight, x.labels = alt.x.labels, 
              y.labels = c("env. filtering", "dispersal", "niche conserv.", "mut./speciation", "competition"),
-             cex.metrics = .8)
+             cex.metrics = .8, cex.models = .8)
 
 mtext("Models", 1, line = 3.5, cex = 2)
-mtext("Metrics", 2, at = nStats/2, cex = 2, line = 8)
+mtext("Metrics", 2, at = nrow(highlightMat)/2, cex = 2, line = 8)
 mtext("Processes", 3, cex = 2, line = 3)
 
 ```
@@ -317,7 +327,7 @@ The internally calculated R2 values of a RF can sometimes be misleading. That's 
 
 ```{r}
 modelColors = data.frame(model = models,
-                         newLabel = c('ca', 'fh', 'gen', 'hs', 'am', 'pw', 've', 'xe'),
+                         newLabel = c('ca', 'fh', 'ge', 'hs', 'am', 'pw', 've', 'xe'),
                          color = c(rgb(0,0,0),
                                    rgb(230/255, 159/255, 0),
                                    rgb(86/255, 180/255, 233/255),
@@ -329,18 +339,16 @@ modelColors = data.frame(model = models,
 
 par(mar = c(4, 6, 0, 0), mgp = c(4, 1, 0))
 
-x = barplot(t(predictabilityR2CV), beside = T, las = 1, horiz = F, ylim = c(0,1.1), ylab = "Predicted-observed correlation", xaxt = "n", cex.lab = 1.8, cex.axis = 1.6, col = modelColors$color)
+# Squaring the correlation values of predictabilityR2CV to get R2's
+x = barplot(t(predictabilityR2CV^2), beside = T, las = 1, horiz = F, ylim = c(0,1.1), ylab = expression("Predicted-observed " ~ R^2), xaxt = "n", cex.lab = 1.8, cex.axis = 1.6, col = modelColors$color)
 
-x = as.vector(x)
-x2 = as.vector(t(predictabilityR2CV))
+axis(1, at = c(5, 14, 23, 32, 41), labels = c("env.\nfiltering", "dispersal", "niche\nconserv.", "mutation/\nspeciation", "competition"), cex.axis = 1.6, line = 1.3, tick = F)
 
-axis(1, at = x[c(4, 12, 20, 28, 36)], labels = c("env.\nfiltering", "dispersal", "niche\nconserv.", "mutation/\nspeciation", "competition"), cex.axis = 1.6, line = 1.3, tick = F)
+axis(1, at = c(0, 9.5, 18.5, 27.5, 36.5, 45.5), tick = T, tck = -0.04, labels = F)
 
-for(i in 1:length(x)){
-  if(!is.na(x2[i])){
-    text(x[i],x2[i] + 0.02, modelAbbrevs$new[(i-1)%%8 + 1], srt = 90,cex= 1.4, adj = 0)    
-  }
-}
+text(6, 1.01, "Models", cex = 2)
+
+legend(0, 1, legend = modelColors$newLabel, fill = modelColors$color, ncol = 2, bty = 'n', cex = 1.5)
 
 ```
 
@@ -625,8 +633,15 @@ for (p in pairs) {
 simuData$model3 = simuData$model
 simuData$model3 = gsub("pontarp", "pw", simuData$model3)
 simuData$model3 = gsub("la", "am", simuData$model3)
+simuData$model3 = gsub("gen", "ge", simuData$model3)
 
-par(mfrow = c(5, 4), mar = c(2, 2, 2, 1)); for (i in c(25,27:43)) { boxplot(simuData[,i] ~ simuData$model3, main = names(simuData)[i], col = rainbow(8))}
+par(mfrow = c(7, 5), mar = c(2, 2, 2, 1), mgp = c(2.5, .6, 0))
+
+boxplot(log10(simuData$number_of_lineages) ~ simuData$model3, main = 'log # of lineages', col = rainbow(8), cex.axis = .85, tck = -0.02)
+
+for (i in statisticsIndices2) { 
+  boxplot(simuData[,i] ~ simuData$model3, main = names(simuData)[i], col = rainbow(8), cex.axis = .85, tck = -0.02)
+}
 ```
 
 # Reproducibility information
